@@ -41,6 +41,7 @@ Daniel Mueller (d-e-s-o)
 Daniel Polanco (dlpolanco)
 Denis Protivenskiy
 Dennis Hamester
+dikiy
 Dmitry Frank (dimonomid)
 eco0414
 Egor Gumenyuk (boo1ean)
